--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.2",
+    "react-router-dom": "^6.23.1",
     "react-text-transition": "^3.1.0",
     "react-type-animation": "^3.2.0",
     "sass": "^1.58.0"
